--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  <!-- col start -->
                  <div class="mycard col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3 text-center mb-4">
                     <img src="img/IMAGE2.png" alt="Teddy Bear">
-                    <h4>Teddy Bear</h4>
+                    <h4>Mega Plush</h4>
                     <a href="#">$ 30.00 USD</a>
                 </div>
                 <!-- col end -->
